[gd_scene load_steps=24 format=3 uid="uid://bnhl8h0jc2rew"]

[ext_resource type="Script" path="res://scripts/camera_gate.gd" id="1_wxr2m"]
[ext_resource type="Texture2D" uid="uid://chiibji82x01g" path="res://Assets/Camera_Gate_Tileset.png" id="2_w0uvb"]
[ext_resource type="Texture2D" uid="uid://e803kmvgtsio" path="res://Assets/Textures/cameraLight.png" id="3_ajrui"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sxhdn"]
atlas = ExtResource("2_w0uvb")
region = Rect2(0, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_was2c"]
atlas = ExtResource("2_w0uvb")
region = Rect2(32, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0rxx"]
atlas = ExtResource("2_w0uvb")
region = Rect2(48, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6haoo"]
atlas = ExtResource("2_w0uvb")
region = Rect2(64, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6k2v"]
atlas = ExtResource("2_w0uvb")
region = Rect2(80, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7scuw"]
atlas = ExtResource("2_w0uvb")
region = Rect2(96, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c8n6"]
atlas = ExtResource("2_w0uvb")
region = Rect2(112, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_417bc"]
atlas = ExtResource("2_w0uvb")
region = Rect2(128, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmfj0"]
atlas = ExtResource("2_w0uvb")
region = Rect2(144, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngsoi"]
atlas = ExtResource("2_w0uvb")
region = Rect2(160, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_papvj"]
atlas = ExtResource("2_w0uvb")
region = Rect2(176, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rubd8"]
atlas = ExtResource("2_w0uvb")
region = Rect2(192, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3sky"]
atlas = ExtResource("2_w0uvb")
region = Rect2(208, 16, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j6qhv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxhdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_was2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0rxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6haoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6k2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7scuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c8n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_417bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmfj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngsoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_papvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rubd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3sky")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_e0xlu"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="AtlasTexture" id="AtlasTexture_vk3md"]
atlas = ExtResource("2_w0uvb")
region = Rect2(20, 21, 8, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_hv0y7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk3md")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_1h4j2"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t56ar"]
gradient = SubResource("Gradient_1h4j2")
fill = 1
fill_from = Vector2(0.490826, 0.486239)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiwhv"]
size = Vector2(7, 31.3779)

[node name="CameraGate" type="Node2D"]
position = Vector2(-2, -1)
script = ExtResource("1_wxr2m")

[node name="Gate" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -15.555)
sprite_frames = SubResource("SpriteFrames_j6qhv")
frame_progress = 1.0
script = SubResource("GDScript_e0xlu")

[node name="AlarmLight" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Anchor" type="Node2D" parent="."]
position = Vector2(6, -27)

[node name="Camera" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(3, -1)
sprite_frames = SubResource("SpriteFrames_hv0y7")
script = SubResource("GDScript_e0xlu")

[node name="AlarmLight" type="PointLight2D" parent="Anchor"]
position = Vector2(0.375, -2.625)
scale = Vector2(0.207031, 0.207031)
enabled = false
color = Color(1, 0, 0, 0.498039)
energy = 2.07
texture = SubResource("GradientTexture2D_t56ar")

[node name="cueLight" type="PointLight2D" parent="."]
position = Vector2(39, -13.625)
scale = Vector2(0.729167, 0.598958)
color = Color(0.34902, 1, 1, 1)
texture = ExtResource("3_ajrui")
texture_scale = 0.75

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-2, -31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 16.1519)
shape = SubResource("RectangleShape2D_aiwhv")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
position = Vector2(4, 63.6816)
color = Color(0.898039, 0, 0, 0.2)
polygon = PackedVector2Array(0, -32, -8, -31.8408, -8, -63.6816, 0, -63.6816)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(0, -10)
polygon = PackedVector2Array(74, 11, 0, 11, 0, -22, 10.0147, -17.534)

[connection signal="timeout" from="AlarmLight" to="." method="_on_alarm_light_length_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
